# Cpp-High-Performance

./: CMakeLists.txt  README.md
Chapter01/: CMakeLists.txt  abstractions.cpp  const_correctness.cpp  exception_safety.cpp  heap_allocations.cpp  references.cpp  resource_acquisition.cpp  strict_interfaces.cpp  value_semantics.cpp
Chapter02/: CMakeLists.txt  any.cpp  auto.cpp  lambda.cpp  lambda_capture.cpp  lambda_vs_stdfunction_benchmark.cpp  move_semantics.cpp  optional.cpp  polymorphic_lambda.cpp  std_function.cpp
Chapter03/: CMakeLists.txt  binary_search.cpp  insertion_sort.cpp  linear_search.cpp  linear_search_point.cpp  scoped_timer.cpp
Chapter04/: CMakeLists.txt  cache_thrashing.cpp  parallel_arrays.cpp  priority_queues.cpp  read_file_into_string.cpp  scooped_timer.hpp  sum_scores.cpp  unordered_sets.cpp
Chapter05/: CMakeLists.txt  compare_c_with_cpp.cpp  iterator.cpp  iterator_distance.cpp  linear_range.cpp
Chapter06/: CMakeLists.txt  contains_duplicates.cpp  find.cpp  grid.cpp  move_n_elements_to_back.cpp  preds.cpp  range_v3.cpp  warriors.cpp
Chapter07/: CMakeLists.txt  alignment.cpp  arena.hpp  operator_new.cpp  padding.cpp  placement_new.cpp  raii_connection.cpp  short_alloc.cpp  small_size_optimization.cpp  stack_memory.cpp  stack_size.cpp  user_arena.cpp
Chapter08/: CMakeLists.txt  any.cpp  compile_time_hash.cpp  compile_time_type_checking.cpp  constexpr_if_animals.cpp  constexpr_if_mod.cpp  constexpr_sum.cpp  decltype.cpp  dynamic_cast_animals.cpp  enable_if.cpp  enable_if_animals.cpp  heterogenous_container_of_variants.cpp  integer_as_template_parameter.cpp  is_detected.cpp  is_detected_and_enable_if.cpp  reflection.cpp  safe_cast.cpp  template_class.cpp  template_function.cpp  tuple.cpp  tuple_algorithms.cpp  tuple_get_tie_structured_comparison.cpp  tuple_structured_bindings.cpp  type_traits.cpp  variadic_template_parameter_pack.cpp  variant.cpp
Chapter09/: CMakeLists.txt  concat_proxy.cpp  distance_proxy.cpp  infix_operator.cpp  pipe_operator.cpp
Chapter10/: CMakeLists.txt  async.cpp  avoid_deadlock.cpp  counter_atomic.cpp  counter_data_race.cpp  counter_mutex.cpp  future_and_promises.cpp  lock_free_queue.cpp  print_thread_id.cpp  producer_consumer.cpp  tasks.cpp
Chapter11/: CMakeLists.txt  accumulate_reduce_foreach.cpp  boost_compute_algorithms.cpp  boost_compute_custom_kernel.cpp  chapter_11.hpp  copy_if.cpp  copy_if_split_into_two_parts.cpp  copy_if_syncronized_write_position.cpp  index_based_loop.cpp  parallel_stl_find.cpp  parallel_stl_policy.cpp  parallel_transform_divide_and_conquer.cpp  parallel_transform_naive.cpp
